get repository, validating as well. error files now as well

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ ojp2-req-res-examples/.idea/misc.xml
 ojp2-req-res-examples/.idea/modules.xml
 ojp2-req-res-examples/.idea/ojp2-req-res-examples.iml
 ojp2-req-res-examples/.idea/vcs.xml
+ojp2-req-res-examples/.idea/vcs.xml
+ojp2-req-res-examples/.idea/vcs.xml
