--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ ojp2-req-res-examples/.idea/ojp2-req-res-examples.iml
 ojp2-req-res-examples/.idea/vcs.xml
 ojp2-req-res-examples/.idea/vcs.xml
 ojp2-req-res-examples/.idea/vcs.xml
+ojp2-req-res-examples/OJP/
