--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ ojp2-req-res-examples/.idea/ojp2-req-res-examples.iml
 ojp2-req-res-examples/.idea/vcs.xml
 ojp2-req-res-examples/.idea/vcs.xml
 ojp2-req-res-examples/.idea/vcs.xml
+ojp2-req-res-examples/.idea
 ojp2-req-res-examples/OJP/
